[package]
name = "slack-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
flawless = { path = "/home/marin/github/flawless-org/flawless/public/flawless" }
flawless-slack = { path = "/home/marin/github/flawless-org/flawless/public/flawless-slack" }
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
